tf-modules/modules/network_security/main.tf
resource "aws_security_group" "ssh" {
  name   = "${var.prefix}-ssh-sg"
  vpc_id = var.vpc_id

  ingress {
    description = "Allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.allowed_ip_range
  }

  tags = {
    Name = "${var.prefix}-ssh-sg"
  }
}

resource "aws_security_group" "public_http" {
  name   = "${var.prefix}-public-http-sg"
  vpc_id = var.vpc_id

  ingress {
    description = "Allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = var.allowed_ip_range
  }

  tags = {
    Name = "${var.prefix}-public-http-sg"
  }
}

resource "aws_security_group" "private_http" {
  name   = "${var.prefix}-private-http-sg"
  vpc_id = var.vpc_id

  tags = {
    Name = "${var.prefix}-private-http-sg"
  }
}

resource "aws_security_group_rule" "private_http_ingress" {
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  security_group_id        = aws_security_group.private_http.id
  source_security_group_id = aws_security_group.public_http.id
}
